# url-shortener

./: README.md  alembic.ini  pyproject.toml
tests/: common_tests.http
url_shortner/: __main__.py  app.py
url_shortner/api/: middlewares.py  schemas.py  utils.py
url_shortner/api/views/: __init__.py  long_url.py  short_url.py
url_shortner/db/: base.py  model.py  session.py
url_shortner/db/migrations/: env.py
url_shortner/db/migrations/versions/: 03ddd8934c96_added_long_url_index.py  7f43b7287a1e_added_url_table.py  e4a95afff7d5_added_long_url_unique_constraint.py
